--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -51,7 +51,7 @@ button {
     font-size: 16px;
 }
 
-.btn-primary {
+/* .btn-primary {
     background-color: #007bff;
     border-color: #007bff;
 }
@@ -65,4 +65,4 @@ button {
 .btn-primary.disabled {
     background-color: #b3d7ff;
     border-color: #b3d7ff;
-}
+} */
