--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,7 +5,15 @@
     <li *ngIf="!isLogged" class="nav-item">
       <a class="nav-link" routerLink="/login">Login</a>
     </li>
-    
+
+    <li *ngIf="isAdmin" class="nav-item">
+      <a class="nav-link" routerLink="/user-list">User Details</a>
+  </li>
+  
+  <li *ngIf="isLogged" class="nav-item">
+      <a class="nav-link" routerLink="/user-profile">Profile</a>
+  </li>
+
     <li *ngIf="isLogged" class="nav-item">
       <a class="nav-link" routerLink="/logout">Logout</a>
     </li>
