--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -47,7 +47,7 @@ button {
     font-size: 16px;
 }
 
-.btn-primary {
+/* .btn-primary {
     background-color: #007bff;
     border-color: #007bff;
 }
@@ -61,4 +61,4 @@ button {
 .btn-primary.disabled {
     background-color: #b3d7ff;
     border-color: #b3d7ff;
-}
+} */
