--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -21,6 +21,6 @@
             <input type="password" class="form-control" id="confirmPassword" formControlName="confirmPassword" />
         </div>
 
-        <button type="submit" class="btn btn-primary" [disabled]="registerForm.invalid">Register</button>
+        <button mat-raised-button color="primary" type="submit"  [disabled]="registerForm.invalid">Register</button>
     </form>
 </div>
