--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <nav class="navbar navbar-expand navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">Angular App</a>
+      <a class="navbar-brand" href="">Angular App</a>
       <app-navbar></app-navbar>
     </div>
   </nav>
   
   <router-outlet></router-outlet>
+
+  <!-- <app-newcomp [parentData]="title"></app-newcomp> -->
