--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -1,5 +1,6 @@
 <mat-card>
   <mat-card-content>
+
 <table>
     <thead>
       <tr>
@@ -7,21 +8,24 @@
         <th>Name</th>
         <th>Email</th>
         <th>Role</th>
+        <th>Actions</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let user of users">
-        <td>{{ user.id }}</td>
-        <td>{{ user.name }}</td>
-        <td>{{ user.email }}</td>
-        <td>{{ user.role.roleName }}</td>
+        <ng-container *ngIf="user.role.roleName != 'ROLE_ADMIN'">
+          <td>{{ user.id }}</td>
+          <td>{{ user.name }}</td>
+          <td>{{ user.email }}</td>
+          <td>{{ user.role.roleName }}</td>
+          <td><button mat-button (click)="onDeleteUser(user.id)">
+            <mat-icon>delete</mat-icon>
+          </button></td>
+        </ng-container>
       </tr>
     </tbody>
   </table>
   </mat-card-content>
   <br>
-  <!-- <mat-card-footer>
-    <mat-paginator [pageSizeOptions]="[5,10,50]" showFirstLastButtons></mat-paginator>
-  </mat-card-footer> -->
 </mat-card>
   
