--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,26 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 @import "~@angular/material/prebuilt-themes/indigo-pink";
+
+
+.green-snackbar {
+    background-color: green;
+    color: white;
+}
+
+.green-snackbar button{
+    background-color: green;
+    color: white !important;
+    border: none;
+}
+
+.red-snackbar {
+    background: red;
+    color: white;
+}
+
+.red-snackbar buttton {
+    background-color: red;
+    color: white !important;
+    border: none;
+}
