--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,8 @@
-<nav class="navbar navbar-expand navbar-dark bg-dark">
-    <div class="container">
-      <a class="navbar-brand" href="">Angular App</a>
+<!-- <nav class="navbar navbar-expand navbar-dark bg-dark">
+    <div class="container"> -->
+      <!-- <a class="navbar-brand" href="">Chronicle</a> -->
       <app-navbar></app-navbar>
-    </div>
-  </nav>
+    <!-- </div>
+  </nav> -->
   
-  <router-outlet></router-outlet>
-
-  <!-- <app-newcomp [parentData]="title"></app-newcomp> -->
+  <!-- <router-outlet></router-outlet> -->
