--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,20 +1,105 @@
-<ul class="navbar-nav ml-auto">
-    <li *ngIf="!isLogged" class="nav-item">
-      <a class="nav-link" routerLink="/register">Register</a>
-    </li>
-    <li *ngIf="!isLogged" class="nav-item">
-      <a class="nav-link" routerLink="/login">Login</a>
-    </li>
+<nav class="navbar navbar-expand navbar-dark bg-dark">
+  <!-- Left-aligned items -->
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm" *ngIf="isAdmin">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <button (click)="drawer.toggle()" color="accent" mat-icon-button>
+              <mat-icon>menu</mat-icon>
+            </button>
+          </li>
+        </ul>
+      </div>
+      <div class="col-sm">
+        <ul class="navbar-nav py-3 px-1">
+          <li class="nav-item">
+            <a class="navbar-brand" href="">Chronicle</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
-    <li *ngIf="isAdmin" class="nav-item">
-      <a class="nav-link" routerLink="/user-list">User Details</a>
-  </li>
-  
-  <li *ngIf="isLogged" class="nav-item">
-      <a class="nav-link" routerLink="/user-profile">Profile</a>
-  </li>
+  <div class="ml-auto">
+    <ul class="navbar-nav">
+      <ng-container *ngIf="!isLogged">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/register">Register</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/login">Login</a>
+        </li>
+      </ng-container>
 
-    <li *ngIf="isLogged" class="nav-item">
-      <a class="nav-link" routerLink="/logout">Logout</a>
-    </li>
-  </ul>
+      <ng-container *ngIf="isAdmin">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/user-list">Users</a>
+        </li>
+      </ng-container>
+
+      <ng-container *ngIf="isLogged">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/user-profile">Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/family-register">Family</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/logout">Logout</a>
+        </li>
+      </ng-container>
+    </ul>
+  </div>
+</nav>
+
+
+  <mat-drawer-container autosize>
+    <mat-drawer #drawer opened="true" mode="side" position="start" >
+    <mat-nav-list  *ngIf="isAdmin">
+        
+        <mat-list-item>
+            <button routerLink="" mat-button><mat-icon>home</mat-icon> Home</button>
+        </mat-list-item>
+        <mat-list-item class="mat-elevation-z4 mat-accent">
+          <h4>Register Module</h4>
+          </mat-list-item>
+        <mat-list-item>
+          <button routerLink="/family-register" mat-button class="light-button"><mat-icon>dashboard</mat-icon> Family</button>
+      </mat-list-item>
+         <mat-list-item>
+            <button routerLink="create-family" mat-button><mat-icon>create</mat-icon> Create Family</button>
+        </mat-list-item>
+      <mat-list-item>
+            <button routerLink="members" mat-button><mat-icon>table</mat-icon> Members</button>
+        </mat-list-item>
+
+        <mat-list-item>
+            <button routerLink="create-member" mat-button><mat-icon>create</mat-icon> Create Member</button>
+        </mat-list-item>
+        <mat-list-item class="mat-elevation-z4 mat-accent">
+        <h4>Accounts Module</h4>
+        </mat-list-item>
+        <mat-list-item>
+          <button routerLink="account-type" mat-button><mat-icon>analytics</mat-icon> Account Type</button>
+      </mat-list-item>  
+        <mat-list-item>
+            <button routerLink="create-type" mat-button><mat-icon>create</mat-icon> Create type</button>
+        </mat-list-item>
+        
+        <mat-list-item>
+          <button routerLink="cash" mat-button><mat-icon>analytics</mat-icon> Cash</button>
+      </mat-list-item>
+        <mat-list-item>
+          <button routerLink="create-cash" mat-button><mat-icon>create</mat-icon> Insert Cash Entry</button>
+      </mat-list-item>
+      
+    </mat-nav-list>
+    </mat-drawer>
+    <mat-drawer-content>
+        <div style="text-align: center;min-height: 600px;">
+
+            <router-outlet></router-outlet>
+            </div>
+    </mat-drawer-content>
+</mat-drawer-container>
