--- a/src/app/components/accounts/account-type/account-type.component.html
+++ b/src/app/components/accounts/account-type/account-type.component.html
@@ -1,19 +1,74 @@
 <div class="container">
-    <mat-card *ngFor="let type of types">
-        <mat-card-header>
-          <mat-card-title>Number: {{ type.id }}</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <p><strong>Type:</strong> {{ type.type }}</p>
-          <p><strong>Description:</strong> {{ type.description }}</p>
-          <!-- <p><strong>dateOfBirth:</strong> {{ member.dateOfBirth }}</p> -->
-        <!-- <div class="d-flex justify-content-center p-3">
-          <button class="mx-2" mat-raised-button color="primary">Edit <mat-icon>edit</mat-icon></button>
-          <button mat-raised-button color="warn" (click)="deleteFamily(family.id)">Delete <mat-icon>delete</mat-icon></button>
-        </div> -->
-        </mat-card-content>
-      </mat-card>
-    <!-- </div> -->
-      
-      
+
+  <mat-card>
+    <mat-card-header>
+  <mat-form-field>
+    <input matInput (keyup)="Filterchange($event)" placeholder="Search" />
+  </mat-form-field>
+
+<ng-container>
+  <div class="container">
+    <div class="flex justify-around py-3">
+      <button (click)="openCreate()" mat-raised-button color="primary">
+        <mat-icon>create</mat-icon> Create Type
+      </button>
+      <button (click)="openCreateCash()" mat-raised-button color="primary">
+        <mat-icon>create</mat-icon> Insert Cash Entry
+      </button>
+    </div>
+  </div>
+
+</ng-container>
+</mat-card-header>
+<mat-card-content>
+  <table matSort mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    
+    <!-- Define the columns -->
+    <ng-container matColumnDef="id">
+      <th mat-sort-header mat-header-cell *matHeaderCellDef>ID</th>
+      <td mat-cell *matCellDef="let type">{{ type.id }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="type">
+      <th mat-sort-header mat-header-cell *matHeaderCellDef>Type</th>
+      <td mat-cell *matCellDef="let type">{{ type.type }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="alias">
+      <th mat-sort-header mat-header-cell *matHeaderCellDef>Alias</th>
+      <td mat-cell *matCellDef="let type">{{ type.alias }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef>Description</th>
+      <td mat-cell *matCellDef="let type">{{ type.description }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Actions</th>
+      <td mat-cell *matCellDef="let type">
+        <div class="action-buttons">
+          <button mat-raised-button color="dark" class="ml-1" (click)="editType(type.id)"><mat-icon>edit</mat-icon></button>
+          <button mat-raised-button color="warn" (click)="deleteType(type.id)"><mat-icon>delete</mat-icon></button>
+        </div>
+      </td>
+    </ng-container>
+
+    <!-- Column Definitions -->
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+</mat-card-content>
+<br>
+<mat-card-footer>
+
+    <mat-paginator [pageSizeOptions]="[5,10,20]" showFirstLastButtons></mat-paginator>
+
+</mat-card-footer>
+</mat-card>
+
+
+
+
 </div>
