--- a/src/app/components/accounts/cash/cash.component.html
+++ b/src/app/components/accounts/cash/cash.component.html
@@ -1,22 +1,120 @@
 <div class="container">
-    <mat-card *ngFor="let amt of cash">
-        <mat-card-header>
-          <mat-card-title>Transaction ID: {{ amt.id }}</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <p><strong>Amount:</strong> {{ amt.amount }}</p>
-          <p><strong>Entered Date:</strong> {{ amt.enteredDate }}</p>
-          <!-- <p><strong>Verified:</strong> {{ amt.isVerified }}</p> -->
-          <p><strong>Members:</strong> {{ amt.members.name }}</p>
-          <p><strong>Account Type:</strong> {{ amt.accountType.type }}</p>
-          <!-- <p><strong>dateOfBirth:</strong> {{ member.dateOfBirth }}</p> -->
-        <!-- <div class="d-flex justify-content-center p-3">
-          <button class="mx-2" mat-raised-button color="primary">Edit <mat-icon>edit</mat-icon></button>
-          <button mat-raised-button color="warn" (click)="deleteFamily(family.id)">Delete <mat-icon>delete</mat-icon></button>
-        </div> -->
-        </mat-card-content>
-      </mat-card>
-    <!-- </div> -->
-      
-      
+
+  <mat-card>
+    <mat-card-header>
+      <mat-form-field appearance="fill" class="h-20 mt-3">
+        <input matInput (keyup)="Filterchange($event)" placeholder="Search" class="h-full"/>
+      </mat-form-field>
+
+      <ng-container>
+        <div class="container">
+          <div class="flex justify-around py-3">
+            <!-- <mat-form-field appearance="fill">
+              <mat-label>Select Year</mat-label>
+              <mat-select [(ngModel)]="selectedYear">
+                <mat-option *ngFor="let year of years" [value]="year">{{ year }}</mat-option>
+              </mat-select>
+            </mat-form-field>
+
+            <mat-form-field appearance="fill">
+              <mat-label>Select Month</mat-label>
+              <mat-select [(ngModel)]="selectedMonth">
+                <mat-option *ngFor="let month of months" [value]="month.value">{{ month.name }}</mat-option>
+              </mat-select>
+            </mat-form-field>
+
+            <div class="p-2 flex">
+              <button mat-raised-button class="text-white save-button"  (click)="fetchCashByType(selectedYear, selectedMonth)">
+                Filter
+              </button>
+            </div> -->
+            <mat-form-field appearance="fill">
+              <mat-label>Select Year</mat-label>
+              <mat-select [(ngModel)]="selectedYear" (ngModelChange)="fetchCashByType(selectedYear, selectedMonth)">
+                <mat-option *ngFor="let year of years" [value]="year">{{ year }}</mat-option>
+              </mat-select>
+            </mat-form-field>
+            
+            <mat-form-field appearance="fill">
+              <mat-label>Select Month</mat-label>
+              <mat-select [(ngModel)]="selectedMonth" (ngModelChange)="fetchCashByType(selectedYear, selectedMonth)">
+                <mat-option *ngFor="let month of months" [value]="month.value">{{ month.name }}</mat-option>
+              </mat-select>
+            </mat-form-field>
+            
+
+            <div class="p-2 flex">
+              <button (click)="openCreateCash()" mat-raised-button color="primary">
+                <mat-icon>create</mat-icon> Insert Cash Entry
+              </button>
+            </div>
+          </div>
+        </div>
+      </ng-container>
+    </mat-card-header>
+    <mat-card-content>
+
+
+      <table matSort mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+        <!-- Define the columns -->
+        <ng-container matColumnDef="id">
+          <th mat-sort-header mat-header-cell *matHeaderCellDef>Transaction ID</th>
+          <td mat-cell *matCellDef="let amt">{{ amt.id }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="amount">
+          <th mat-sort-header mat-header-cell *matHeaderCellDef>Amount</th>
+          <td mat-cell *matCellDef="let amt">{{ amt.amount }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="enteredDate">
+          <th mat-sort-header mat-header-cell *matHeaderCellDef>Entered Date</th>
+          <td mat-cell *matCellDef="let amt">{{ amt.createdDate | date: 'short' }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="date">
+          <th mat-sort-header mat-header-cell *matHeaderCellDef>Date</th>
+          <td mat-cell *matCellDef="let amt">{{ amt.date | date: 'shortDate' }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="memberName">
+          <th mat-header-cell *matHeaderCellDef>Member Name</th>
+          <td mat-cell *matCellDef="let amt">{{ amt.members.name }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="accountType">
+          <th mat-header-cell *matHeaderCellDef>Account Type</th>
+          <td mat-cell *matCellDef="let amt">{{ amt.accountType.type }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="remarks">
+          <th mat-header-cell *matHeaderCellDef>Remarks</th>
+          <td mat-cell *matCellDef="let amt">{{ amt.remarks }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef>Actions</th>
+          <td mat-cell *matCellDef="let member">
+            <div class="action-buttons">
+              <button mat-raised-button color="dark" class="ml-1"
+                (click)="editCash(member.id)"><mat-icon>edit</mat-icon></button>
+              <button mat-raised-button color="warn"
+                (click)="deleteCash(member.id)"><mat-icon>delete</mat-icon></button>
+            </div>
+          </td>
+        </ng-container>
+
+        <!-- Column Definitions -->
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </mat-card-content>
+    <br>
+    <mat-card-footer>
+
+      <mat-paginator [pageSizeOptions]="[5,10,20]" showFirstLastButtons></mat-paginator>
+
+    </mat-card-footer>
+  </mat-card>
 </div>
