--- a/src/app/components/accounts/create-type/create-type.component.html
+++ b/src/app/components/accounts/create-type/create-type.component.html
@@ -1,11 +1,17 @@
 <mat-card>
     <div class="container">
-      <h2>Create new type</h2>
+      <h2>{{title}}  type</h2>
       <form class="create-form" [formGroup]="registerForm" (ngSubmit)="submitForm()">
         <div class="form-group">
           <mat-form-field class="create-full-width" appearance="fill">
             <mat-label>Type</mat-label>
             <input matInput formControlName="type" />
+          </mat-form-field>
+        </div>
+        <div class="form-group">
+          <mat-form-field class="create-full-width" appearance="fill">
+            <mat-label>Type(Malayalam)</mat-label>
+            <input matInput formControlName="alias" />
           </mat-form-field>
         </div>
         <div class="form-group">
