--- a/src/app/components/accounts/insert-cash/insert-cash.component.html
+++ b/src/app/components/accounts/insert-cash/insert-cash.component.html
@@ -1,6 +1,6 @@
 <mat-card>
     <div class="container">
-      <h2>Enter cash</h2>
+      <h2>{{title}} cash</h2>
       <form class="create-form" [formGroup]="registerForm" (ngSubmit)="submitForm()">
         <div class="form-group">
           <mat-form-field class="create-full-width" appearance="fill">
@@ -8,23 +8,23 @@
             <input matInput formControlName="amount" />
           </mat-form-field>
         </div>
-        <!-- <div class="form-group">
+        <div class="form-group">
           <mat-form-field class="create-full-width" appearance="fill">
-            <mat-label>members</mat-label>
-            <input matInput formControlName="members" />
+            <mat-label>Remarks</mat-label>
+            <input matInput formControlName="remarks" />
           </mat-form-field>
-        </div> -->
+        </div>
         <div class="form-group">
             <mat-form-field class="create-full-width" appearance="fill">
               <mat-label>Member name</mat-label>
               <mat-select formControlName="members">
-                <mat-option *ngFor="let member of members" [value]="member.memberId">
+                <mat-option *ngFor="let member of members" [value]="member.id">
                   {{ member.name }} 
                 </mat-option>
               </mat-select>
             </mat-form-field>
           </div>
-        <div class="form-group">
+        <div class="form-group" *ngIf="title !== 'Edit'">
             <mat-form-field class="create-full-width" appearance="fill">
               <mat-label>Account type</mat-label>
               <mat-select formControlName="accountType">
@@ -32,6 +32,15 @@
                   {{ type.type }} 
                 </mat-option>
               </mat-select>
+            </mat-form-field>
+          </div>
+
+          <div  class="form-group"  *ngIf="title !== 'Edit'">
+            <mat-form-field class="create-full-width" appearance="fill">
+              <mat-label>Date</mat-label>
+              <input matInput [matDatepicker]="LeavePicker" formControlName="date">
+              <mat-datepicker-toggle matIconSuffix [for]="LeavePicker"></mat-datepicker-toggle>
+              <mat-datepicker #LeavePicker></mat-datepicker>
             </mat-form-field>
           </div>
           
