--- a/src/app/components/delete-confirmation/delete-confirmation.component.html
+++ b/src/app/components/delete-confirmation/delete-confirmation.component.html
@@ -1,6 +1,6 @@
-<h2 mat-dialog-title>Confirmation</h2>
-    <div mat-dialog-content>Are you sure you want to delete?</div>
-    <div mat-dialog-actions>
-      <button mat-button (click)="onNoClick()">No</button>
-      <button mat-button color="warn" (click)="onYesClick()">Yes</button>
-    </div>
+  <h2 mat-dialog-title>Confirm Delete</h2>
+  <mat-dialog-content>Are you sure you want to delete this?</mat-dialog-content>
+  <mat-dialog-actions align="end">
+    <button mat-button mat-dialog-close>No</button>
+    <button mat-button color="warn" [mat-dialog-close]="true">Delete</button>
+  </mat-dialog-actions>
