--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,9 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 @import "~@angular/material/prebuilt-themes/indigo-pink";
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 .green-snackbar {
     background-color: green;
@@ -26,3 +29,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     color: white !important;
     border: none;
 }
+
+  
