--- a/src/app/components/accounts/account-type/account-type.component.html
+++ b/src/app/components/accounts/account-type/account-type.component.html
@@ -2,71 +2,86 @@
 
   <mat-card>
     <mat-card-header>
-  <mat-form-field>
-    <input matInput (keyup)="Filterchange($event)" placeholder="Search" />
-  </mat-form-field>
 
-<ng-container>
-  <div class="container">
-    <div class="flex justify-around py-3">
-      <button (click)="openCreate()" mat-raised-button color="primary">
-        <mat-icon>create</mat-icon> Create Type
-      </button>
-      <button (click)="openCreateCash()" mat-raised-button color="primary">
-        <mat-icon>create</mat-icon> Insert Cash Entry
-      </button>
-    </div>
-  </div>
+      <ng-container>
+        <div class="container">
+          <!-- Search bar -->
+          <div class="row justify-content-between py-3">
+            <div class="col-md-4 ">
+              <mat-form-field class="w-100">
+                <input matInput (keyup)="Filterchange($event)" placeholder="Search" />
+              </mat-form-field>
+            </div>
 
-</ng-container>
-</mat-card-header>
-<mat-card-content>
-  <table matSort mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-    
-    <!-- Define the columns -->
-    <ng-container matColumnDef="id">
-      <th mat-sort-header mat-header-cell *matHeaderCellDef>ID</th>
-      <td mat-cell *matCellDef="let type">{{ type.id }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="type">
-      <th mat-sort-header mat-header-cell *matHeaderCellDef>Type</th>
-      <td mat-cell *matCellDef="let type">{{ type.type }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="alias">
-      <th mat-sort-header mat-header-cell *matHeaderCellDef>Alias</th>
-      <td mat-cell *matCellDef="let type">{{ type.alias }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef>Description</th>
-      <td mat-cell *matCellDef="let type">{{ type.description }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef>Actions</th>
-      <td mat-cell *matCellDef="let type">
-        <div class="action-buttons">
-          <button mat-raised-button color="dark" class="ml-1" (click)="editType(type.id)"><mat-icon>edit</mat-icon></button>
-          <button mat-raised-button color="warn" (click)="deleteType(type.id)"><mat-icon>delete</mat-icon></button>
+            <!-- Buttons -->
+            <div class="col-md-4 mb-2">
+              <button (click)="openCreate()" mat-raised-button color="primary" class="w-100">
+                <mat-icon>library_add</mat-icon> <span class="d-none d-md-inline">Create </span>Type
+              </button>
+            </div>
+            <div class="col-md-4 mb-2">
+              <button (click)="openCreateCash()" mat-raised-button color="primary" class="w-100">
+                <mat-icon>payment</mat-icon> <span class="d-none d-md-inline">Insert </span>Cash
+              </button>
+            </div>
+          </div>
         </div>
-      </td>
-    </ng-container>
+      </ng-container>
 
-    <!-- Column Definitions -->
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+    </mat-card-header>
+    <mat-card-content>
+      <div class="table-responsive">
+        <table matSort mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-</mat-card-content>
-<br>
-<mat-card-footer>
+          <!-- Define the columns -->
+          <ng-container matColumnDef="id">
+            <th mat-sort-header mat-header-cell *matHeaderCellDef>ID</th>
+            <td mat-cell *matCellDef="let type">{{ type.id }}</td>
+          </ng-container>
 
-    <mat-paginator [pageSizeOptions]="[5,10,20]" showFirstLastButtons></mat-paginator>
+          <ng-container matColumnDef="type">
+            <th mat-sort-header mat-header-cell *matHeaderCellDef>Type</th>
+            <td mat-cell *matCellDef="let type">{{ type.type }}</td>
+          </ng-container>
 
-</mat-card-footer>
-</mat-card>
+          <ng-container matColumnDef="alias">
+            <th mat-sort-header mat-header-cell *matHeaderCellDef>Alias</th>
+            <td mat-cell *matCellDef="let type">{{ type.alias }}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="description">
+            <th mat-header-cell *matHeaderCellDef>Description</th>
+            <td mat-cell *matCellDef="let type">{{ type.description }}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef>Actions</th>
+            <td mat-cell *matCellDef="let type">
+              <div class="action-buttons d-flex flex-wrap justify-content-center">
+                <button mat-raised-button color="dark" class="mx-1 mb-1" (click)="editType(type.id)">
+                  <mat-icon>edit</mat-icon>Edit
+                </button>
+                <button mat-raised-button color="warn" class="mx-1 mb-1" (click)="deleteType(type.id)">
+                  <mat-icon>delete</mat-icon>Delete
+                </button>
+              </div>
+              
+            </td>
+          </ng-container>
+
+          <!-- Column Definitions -->
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+      </div>
+    </mat-card-content>
+    <br>
+    <mat-card-footer>
+
+      <mat-paginator [pageSizeOptions]="[5,10,20]" showFirstLastButtons></mat-paginator>
+
+    </mat-card-footer>
+  </mat-card>
 
 
 
