--- a/src/app/components/accounts/cash/cash.component.html
+++ b/src/app/components/accounts/cash/cash.component.html
@@ -2,58 +2,50 @@
 
   <mat-card>
     <mat-card-header>
-      <mat-form-field appearance="fill" class="h-20 mt-3">
-        <input matInput (keyup)="Filterchange($event)" placeholder="Search" class="h-full"/>
-      </mat-form-field>
-
       <ng-container>
         <div class="container">
-          <div class="flex justify-around py-3">
-            <!-- <mat-form-field appearance="fill">
-              <mat-label>Select Year</mat-label>
-              <mat-select [(ngModel)]="selectedYear">
-                <mat-option *ngFor="let year of years" [value]="year">{{ year }}</mat-option>
-              </mat-select>
-            </mat-form-field>
-
-            <mat-form-field appearance="fill">
-              <mat-label>Select Month</mat-label>
-              <mat-select [(ngModel)]="selectedMonth">
-                <mat-option *ngFor="let month of months" [value]="month.value">{{ month.name }}</mat-option>
-              </mat-select>
-            </mat-form-field>
-
-            <div class="p-2 flex">
-              <button mat-raised-button class="text-white save-button"  (click)="fetchCashByType(selectedYear, selectedMonth)">
-                Filter
-              </button>
-            </div> -->
-            <mat-form-field appearance="fill">
-              <mat-label>Select Year</mat-label>
-              <mat-select [(ngModel)]="selectedYear" (ngModelChange)="fetchCashByType(selectedYear, selectedMonth)">
-                <mat-option *ngFor="let year of years" [value]="year">{{ year }}</mat-option>
-              </mat-select>
-            </mat-form-field>
-            
-            <mat-form-field appearance="fill">
-              <mat-label>Select Month</mat-label>
-              <mat-select [(ngModel)]="selectedMonth" (ngModelChange)="fetchCashByType(selectedYear, selectedMonth)">
-                <mat-option *ngFor="let month of months" [value]="month.value">{{ month.name }}</mat-option>
-              </mat-select>
-            </mat-form-field>
-            
-
-            <div class="p-2 flex">
-              <button (click)="openCreateCash()" mat-raised-button color="primary">
-                <mat-icon>create</mat-icon> Insert Cash Entry
-              </button>
+          <div class="row justify-content-between py-3">
+            <!-- Search -->
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-2">
+              <mat-form-field appearance="fill" class="h-20 w-100">
+                <input matInput (keyup)="Filterchange($event)" placeholder="Search" class="h-full" />
+              </mat-form-field>
             </div>
+            <!-- Year Select -->
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-2">
+              <mat-form-field appearance="fill" class="w-100">
+                <mat-label>Select Year</mat-label>
+                <mat-select [(ngModel)]="selectedYear" (ngModelChange)="fetchCashByType(selectedYear, selectedMonth)">
+                  <mat-option *ngFor="let year of years" [value]="year">{{ year }}</mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+            <!-- Month Select -->
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-2">
+              <mat-form-field appearance="fill" class="w-100">
+                <mat-label>Select Month</mat-label>
+                <mat-select [(ngModel)]="selectedMonth" (ngModelChange)="fetchCashByType(selectedYear, selectedMonth)">
+                  <mat-option *ngFor="let month of months" [value]="month.value">{{ month.name }}</mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+            <!-- Insert Cash Entry Button -->
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-2">
+              <div class="p-2 flex">
+                <button (click)="openCreateCash()" mat-raised-button color="primary" class="w-100">
+                  <mat-icon>payment</mat-icon> <span class="d-none d-md-inline">Insert </span>Cash
+                </button>
+              </div>
+            </div>
+            <!-- Placeholder for the fourth item -->
+            <div class="col-lg-3 d-lg-block d-md-none d-sm-none d-xs-none"></div>
           </div>
         </div>
       </ng-container>
     </mat-card-header>
-    <mat-card-content>
 
+    <mat-card-content>
+      <div class="table-responsive">
 
       <table matSort mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
@@ -97,11 +89,14 @@
           <th mat-header-cell *matHeaderCellDef>Actions</th>
           <td mat-cell *matCellDef="let member">
             <div class="action-buttons">
-              <button mat-raised-button color="dark" class="ml-1"
-                (click)="editCash(member.id)"><mat-icon>edit</mat-icon></button>
-              <button mat-raised-button color="warn"
-                (click)="deleteCash(member.id)"><mat-icon>delete</mat-icon></button>
+              <button mat-raised-button color="dark" class="mr-2" (click)="editCash(member.id)">
+                <mat-icon>edit</mat-icon>Edit
+              </button>
+              <button mat-raised-button color="warn" (click)="deleteCash(member.id)">
+                <mat-icon>delete</mat-icon>Delete
+              </button>
             </div>
+            
           </td>
         </ng-container>
 
@@ -109,6 +104,7 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
+    </div>
     </mat-card-content>
     <br>
     <mat-card-footer>
