--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,18 +2,14 @@
   <!-- Left-aligned items -->
   <div class="container-fluid">
     <div class="row">
-      <div class="col-sm" *ngIf="isAdmin">
+      <div class="col-md" *ngIf="isAdmin">
         <ul class="navbar-nav">
           <li class="nav-item">
             <button (click)="drawer.toggle()" color="accent" mat-icon-button>
               <mat-icon>menu</mat-icon>
             </button>
-          </li>
-        </ul>
-      </div>
-      <div class="col-sm">
-        <ul class="navbar-nav py-3 px-1">
-          <li class="nav-item">
+          </li> 
+          <li class="nav-item py-3 px-1">
             <a class="navbar-brand" href="">Chronicle</a>
           </li>
         </ul>
@@ -54,62 +50,35 @@
 </nav>
 
 
-  <mat-drawer-container autosize>
-    <mat-drawer #drawer opened="true" mode="side" position="start" >
-    <mat-nav-list  *ngIf="isAdmin">
-        
-        <!-- <mat-list-item>
-            <button routerLink="" mat-button><mat-icon>home</mat-icon> Home</button>
-        </mat-list-item> -->
-        <!-- <mat-list-item class="mat-elevation-z4 mat-accent">
-          <h4>Register Module</h4>
-          </mat-list-item>-->
-        <mat-list-item> 
-          <button routerLink="/family-register" mat-button class="light-button"><mat-icon>dashboard</mat-icon> Family</button>
-      </mat-list-item>
-         <!-- <mat-list-item>
-            <button routerLink="create-family" mat-button><mat-icon>create</mat-icon> Create Family</button>
-        </mat-list-item> 
-      <mat-list-item>
-            <button routerLink="members" mat-button><mat-icon>table</mat-icon> Members</button>
-        </mat-list-item>
+<mat-drawer-container autosize>
+  <mat-drawer #drawer opened="true" mode="side" position="start">
+    <mat-nav-list *ngIf="isAdmin">
 
-        <mat-list-item>
-            <button routerLink="create-member" mat-button><mat-icon>create</mat-icon> Create Member</button>
-        </mat-list-item>-->
-        <!-- <mat-list-item class="mat-elevation-z4 mat-accent">
-        <h4>Accounts Module</h4>
-        </mat-list-item> -->
-        <mat-list-item>
-          <button routerLink="account-dashboard" mat-button><mat-icon>account_balance</mat-icon> Accounts</button>
-      </mat-list-item>  
-        <mat-list-item>
-          <button routerLink="account-type" mat-button><mat-icon>account_balance_wallet</mat-icon> Account Type</button>
-      </mat-list-item>  
-        <!-- <mat-list-item>
-            <button routerLink="create-type" mat-button><mat-icon>create</mat-icon> Create type</button>
-        </mat-list-item> -->
-        
-        <!-- <mat-list-item>
-          <button routerLink="cash" mat-button><mat-icon>account_balance_wallet</mat-icon> Cash</button>
-      </mat-list-item> -->
-        <!-- <mat-list-item>
-          <button routerLink="create-cash" mat-button><mat-icon>create</mat-icon> Insert Cash Entry</button>
-      </mat-list-item> -->
-      
+      <mat-list-item>
+        <button routerLink="/family-register" mat-button class="light-button"><mat-icon>dashboard</mat-icon>
+          Family</button>
+      </mat-list-item>
+
+      <mat-list-item>
+        <button routerLink="account-dashboard" mat-button><mat-icon>account_balance</mat-icon> Accounts</button>
+      </mat-list-item>
+      <mat-list-item>
+        <button routerLink="account-type" mat-button><mat-icon>library_books</mat-icon> Account Type</button>
+      </mat-list-item>
+
     </mat-nav-list>
-    </mat-drawer>
-    <mat-drawer-content>
-        <div class="router-outlet-container" style="text-align: center;min-height: 600px;">
-          <!-- <mat-drawer-content class="d-flex flex-column">
+  </mat-drawer>
+  <mat-drawer-content>
+    <div class="router-outlet-container" style="text-align: center;min-height: 600px;">
+      <!-- <mat-drawer-content class="d-flex flex-column">
             <div style="flex: 1;"> -->
-          <router-outlet></router-outlet>
-          <!-- Footer -->
-          <!-- <footer class="footer mt-auto py-3 bg-light text-dark">
+      <router-outlet></router-outlet>
+      <!-- Footer -->
+      <!-- <footer class="footer mt-auto py-3 bg-light text-dark">
             <div class="container text-center">
               Powered By corner 2024
             </div>
           </footer> -->
-        </div>
-    </mat-drawer-content>
+    </div>
+  </mat-drawer-content>
 </mat-drawer-container>
