--- a/src/app/components/accounts/cash/cash.component.html
+++ b/src/app/components/accounts/cash/cash.component.html
@@ -88,7 +88,7 @@
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef>Actions</th>
           <td mat-cell *matCellDef="let member">
-            <div class="action-buttons">
+            <div class="action-buttons d-flex justify-content-center">
               <button mat-raised-button color="dark" class="mr-2" (click)="editCash(member.id)">
                 <mat-icon>edit</mat-icon>Edit
               </button>
