--- a/src/app/components/accounts/accounts-dashboard/accounts-dashboard.component.html
+++ b/src/app/components/accounts/accounts-dashboard/accounts-dashboard.component.html
@@ -19,7 +19,7 @@
             </button>
           </div>
           <!-- Cards Section -->
-          <div class="col-md-4" *ngFor="let type of types">
+          <div class="col-md-4" *ngFor="let type of types" (click)="openType(type.id)">
             <mat-card class="my-2">
               <mat-card-content>
                 <h4>{{ type.type }}</h4>
