--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,7 +8,7 @@
             <button (click)="drawer.toggle()" color="accent" mat-icon-button>
               <mat-icon>menu</mat-icon>
             </button>
-          </li> 
+          </li>
           <li class="nav-item py-3 px-1">
             <a class="navbar-brand" href="">Chronicle</a>
           </li>
@@ -18,10 +18,13 @@
   </div>
 
   <div class="ml-auto">
-    <ul class="navbar-nav">
+    <ul class="navbar-nav home-nav">
       <ng-container *ngIf="!isLogged">
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" routerLink="/register">Register</a>
+        </li> -->
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/home">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/login">Login</a>
