--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -17,4 +17,5 @@
 
                 <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid" >Login</button>
             </form>
+            <div class="dummy-credentials">accountant@gmail.com / 1234</div>
     </div>
