--- a/src/app/components/accounts/create-type/create-type.component.html
+++ b/src/app/components/accounts/create-type/create-type.component.html
@@ -20,9 +20,7 @@
             <input matInput formControlName="description" />
           </mat-form-field>
         </div>
-        <button mat-raised-button color="primary" type="submit" [disabled]="registerForm.invalid">
-          Submit
-        </button>
+        <button mat-raised-button color="primary" type="submit" [disabled]="registerForm.invalid || isSubmitting">Submit</button>
       </form>
     </div>
   </mat-card>
