--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -15,7 +15,7 @@
                     <input type="password" class="form-control" id="password" formControlName="password" />
                 </div>
 
-                <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid || isSubmitting">Submit</button>
+                <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid || isSubmitting">Login</button>
             </form>
             <div class="dummy-credentials">accountant@gmail.com / 1234</div>
     </div>
