changed area name to region, minor css in navbar active

--- a/src/app/components/family/create-family/create-family.component.html
+++ b/src/app/components/family/create-family/create-family.component.html
@@ -25,13 +25,13 @@
         <div class="form-group row">
           <div class="col">
             <mat-form-field class="create-full-width" appearance="fill">
-              <mat-label>Area</mat-label>
+              <mat-label>Region</mat-label>
               <input matInput formControlName="area" />
             </mat-form-field>
           </div>
           <div class="col">
             <mat-form-field class="create-full-width" appearance="fill">
-              <mat-label>Area(Malayalam)</mat-label>
+              <mat-label>Region(Malayalam)</mat-label>
               <input matInput formControlName="aliasArea" />
             </mat-form-field>
           </div>
