--- a/src/app/components/family/family-detailed/family-detailed.component.html
+++ b/src/app/components/family/family-detailed/family-detailed.component.html
@@ -25,7 +25,7 @@
       </ng-container>
 
       <ng-container matColumnDef="sex">
-        <th mat-header-cell *matHeaderCellDef>Sex</th>
+        <th mat-header-cell *matHeaderCellDef>Gender</th>
         <td mat-cell *matCellDef="let member">{{ member.sex }}</td>
       </ng-container>
 
