--- a/src/app/components/family/family-register/family-register.component.html
+++ b/src/app/components/family/family-register/family-register.component.html
@@ -42,7 +42,7 @@
             </ng-container>
 
             <ng-container matColumnDef="area">
-              <th mat-sort-header mat-header-cell *matHeaderCellDef>Area</th>
+              <th mat-sort-header mat-header-cell *matHeaderCellDef>Region</th>
               <td mat-cell *matCellDef="let family">{{ family.area }}</td>
             </ng-container>
 
