--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -40,3 +40,7 @@
   /* background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(196, 141, 255, 0.5));  */
 
 }
+.active {
+  background-color: #ededed; /* Set your desired active background color */
+  color: #fff; /* Set your desired active text color */
+}
